# plato-room-security-audit-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  report.rs  scanner.rs
tests/: common.rs  test_command_injection.rs  test_hardcoded_secrets.rs  test_path_traversal.rs  test_report.rs  test_room.rs  test_sql_injection.rs  test_xss.rs
